--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <p class="card__page-views">100k Pageviews</p>
           <input type="range" name="page-views" min="0" max="4" value="2">
           <div class="card__price">
-            <p class="card__discount-price card__disco">Descuento</p>
+            <p class="card__discount-price">Descuento</p>
             <p>
               <span class="card__normal-price">$16.00</span> / month
             </p>
@@ -35,7 +35,6 @@
             <p class="discount">25% discount</p>
           </div>
         </div>
-
       </div>
       <div class="card__bottom">
         <ul class="card__highlights">
